hw06/test/zm-hw6-classFun-override-MismatchParam-float4-int-not-allowed.fmj
public int main() { }

public class C0  {
    public class C0 id(float a, float b, int [] c, float [] d, class C0 e, class C1 f){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(int a, float b, int [] c, float [] d, class C0 e, class C1 f){ // error: int a 不匹配
        return new C0();
    }
}
